--- a/frontend/task-management/src/Pages/Dashboard/Home.css
+++ b/frontend/task-management/src/Pages/Dashboard/Home.css
@@ -1,13 +1,10 @@
-body {
-    max-width: 100vw;
-}
-
 .home {
     background-color: #33373a;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
     min-width: 100vw;
+    overflow: hidden;
 }
 
 .home-container {
@@ -180,6 +177,11 @@ body {
     .home-container {
         align-content: center;
         min-width: 100vw;
+        justify-content: space-between;
+    }
+
+    .dropdown-btn {
+        margin: 0;
     }
 
     .home-sidebar {
